--- a/04_livrable/rapport_technique_backup_230411.tex
+++ b/04_livrable/rapport_technique_backup_230411.tex
@@ -344,10 +344,11 @@ Avant de passer à l'encodage manuel nous utilisons une autre transformation xsl
     \end{itemize}
     \item Nous modifions les valeurs des @xml:id des éléments <div> qui entourent chacun des articles du texte, afin de les fairre correspondre aux valeurs de notre base de donnée.
         \begin{itemize}
-            \item Ainsi le chapitre « À quoi servent les théories » encodé par un <div> n'aura plus comme valeur de l'@xml:id "page006" mais "1".
+            \item Par exemple, le chapitre « À quoi servent les théories » encodé par un <div> n'aura plus comme valeur de l'@xml:id "page006" mais "1". L'utilisation des pages comme identifiants nous paraît superflu, vu la présence d'élément <pb> à chaque début de page.
         \end{itemize}
     \item Nous retouchons les titres (de sections et de sous-sections) afin de corriger l'encodage d'origine qui encodait chacune des lignes d'un titre ou sous-titre ainsi que les dates dans deux éléments <head> différents. Les capitales sont égalements remplacés par des minuscules qui seront plus tard affichées en petites capitales.
-    \item Tous les autres éléments et attributs déjà présents sont reproduits à l'identique. Ce qui nous permets de réappliquer la transformation sur notre fichier d'encodage manuel autant de fois que nécessaire. Nous nous contenterons de modifier le nom du fichier de sortie afin de ne pas écraser les précédentes itérations. 
+    \item Les mentions des dates sont intégrées aux titres et encodées en tant que <date> avec un attribut @rend dont la valeur est "italic". Par ailleurs, nous en retirons les parenthèses qui provoquaient une erreur sans doute dû au moteur d'expression régulière d'Oxygen\footnoteB{En expression régulière, les signes «~()~» servent à garder en mémoire les caractères qu'ils contiennent. Or, notre transformation recourait au moteur d'expression régulière inclut dans Oxugen pour intégrer les dates au titre. Ceci provoquait une erreur~: la transformation considérait que les caractères «~()~» devait être interprété comme des délimiteurs d'expression régulière et non comme le contenu à supprimer, ainsi les dates étaient bien supprimées mais pas les parenthèses les entourants.}, les parenthèses seront rétablies dans la version html de l'édition.
+    \item Tous les autres éléments et attributs déjà présents sont reproduits à l'identique. Par là nous nous assurons de pouvoir réappliquer la transformation sur notre fichier d'encodage manuel autant de fois que nécessaire. Nous nous contenterons de modifier le nom du fichier de sortie afin de ne pas écraser les précédentes itérations. Ainsi nous pouvons appliquer des corrections «~en cours de route~» sans perdre les ajouts manuels.
 \end{itemize}
 }
 
