--- a/04_livrable/rapport_technique_backup_230411.tex
+++ b/04_livrable/rapport_technique_backup_230411.tex
@@ -392,4 +392,15 @@ Les transformations XSL fonctionne par \textit{template}, patron, qui commande l
 
 
 
+
+
+
+\section{Conclusion}
+
+Tout au long de notre travail nous nosu sommes efforcé d'employer la technique au service de questions scientifiques. Et si, bien souvent, la technique interroge le choix scientifique, nous nous sommes evertué à ne pas confondre questions et difficultés techniques. En effet trop souvent, sommes-nous tenter de remettre en question le 
+
+sans doute, tout n'y est pas, sans doute chercher à identifier et produire toutes les citations en contextes relève de l'impossible : \robbe{} peut s'être trompé, l'édition avoir disparu, une citation en appelle une autre, etc. Pareil projet cependant se mène non en ayant à cœur de couvrir l'ouvrage entier (du moins sans s'en faire l'illusion) et toute son époque, mais bien en sachant que l'on ne propose qu'une lecture, partialle partielle parmi d'autres,  qui n'épuise pas l'œuvre.
+
+%(cf«  aiguille » dans Renard et bousole 10-11 )\ref{}
+
 \end{document}
